@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.753 2008/09/11 16:40:53 martin Exp $
+# $Id: CHANGES,v 1.754 2008/09/12 16:23:53 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.3 (2008/??/??)
+ - (2008/09/12) Fixed bug# 3292 - Missing entries in the generic agent mask if
+    a freetext field is configured as pull down menu.
  - (2008/09/11) Fixed bug# 3284 - Missing entries in the stats mask if a
     freetext field is configured as pull down menu.
  - (2008/09/10) Fixed bug# 3287 - Possible CSS on login page, in
